@@ -1,10 +1,10 @@
 package com.example.loginapp;
 
+import com.example.loginapp.api.*;
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.application.Platform;
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
+
 import javafx.fxml.FXML;
 import javafx.geometry.Pos;
 import javafx.scene.control.*;
@@ -14,7 +14,7 @@ import javafx.stage.Stage;
 import javafx.util.Duration;
 import javafx.scene.control.ScrollPane;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
@@ -30,26 +30,26 @@ public class AIViewController {
     @FXML private Button aiCloseButton;
     @FXML private HBox quickActionsContainer;
 
-    // Sample quick actions
-    private final List<String> quickActions = Arrays.asList(
-            "Travel advice", "Assistant", "Festival budget"
-    );
+    // API service factory
+    private final ApiServiceFactory apiServiceFactory = ApiServiceFactory.getInstance();
 
-    // Sample AI responses
-    private final List<String> aiResponses = Arrays.asList(
+    // Quick actions
+    private List<QuickAction> quickActions = new ArrayList<>();
+
+    // Sample AI responses for fallback
+    private final List<String> fallbackResponses = List.of(
             "OK! According to the billing data you recorded, with an annual income of $300,000 and annual expenses of $150,000, your average monthly expenses are about $12,500. As an important festival in China, the expenditure of the Spring Festival is usually higher than usual, mainly including the following aspects:\n\n1.Gifts and red envelopes: Spring Festival is a peak time for gifts and red envelopes, especially for family members, relatives and friends. Depending on your income level, you can expect to spend between $10,000 and $20,000, depending on the number and amount of money you need to give out.\n\n2.Food and meals: Family meals and purchases are common expenses during the Spring Festival. Expect to spend between $5,000 and $10,000 depending on the size of your family and the frequency of meals.\n\n3.Travel and entertainment: If you plan to travel or participate in entertainment activitie during the Chinese New Year, this part of the expenditure may be higher. It is expected that the cost of the trip can be between 10,000 and 30,000, depending on the distance to the destination and the method of travel.",
             "Based on your spending patterns, I recommend setting aside about 15% of your monthly income for savings. This would be approximately ¥3,750 per month based on your current income level.",
             "Looking at your transaction history, your largest expense categories are housing (35%), food (25%), and transportation (15%). You might want to consider reducing your dining out expenses, which account for 60% of your food budget.",
             "I've analyzed your investment portfolio and noticed it's heavily weighted towards technology stocks (65%). For better diversification, consider allocating more to other sectors like healthcare and consumer staples."
     );
 
-    // List to store message history
-    private ObservableList<Label> messages = FXCollections.observableArrayList();
+
 
     @FXML
     public void initialize() {
-        // Set up the quick action buttons
-        setupQuickActions();
+        // Load quick actions
+        loadQuickActions();
 
         // Set up the send button action
         aiSendButton.setOnAction(event -> handleSendMessage());
@@ -62,16 +62,41 @@ public class AIViewController {
     }
 
     /**
+     * Load quick actions from the API
+     */
+    private void loadQuickActions() {
+        try {
+            // Get the AI service
+            AIService aiService = apiServiceFactory.getAIService();
+
+            // Get quick actions
+            quickActions = aiService.getQuickActions();
+
+            // Set up quick action buttons
+            setupQuickActionButtons();
+        } catch (ApiException e) {
+            // If there's an error, use default quick actions
+            quickActions = List.of(
+                new QuickAction("budget", "How can I budget better?"),
+                new QuickAction("save", "Tips for saving money"),
+                new QuickAction("invest", "Investment advice")
+            );
+            setupQuickActionButtons();
+            System.err.println("Error loading quick actions: " + e.getMessage());
+        }
+    }
+
+    /**
      * Set up quick action buttons
      */
-    private void setupQuickActions() {
+    private void setupQuickActionButtons() {
         quickActionsContainer.getChildren().clear();
 
-        for (String action : quickActions) {
-            Button actionButton = new Button(action);
+        for (QuickAction action : quickActions) {
+            Button actionButton = new Button(action.getText());
             actionButton.getStyleClass().add("ai-quick-action");
             actionButton.setOnAction(event -> {
-                aiInputField.setText(action);
+                aiInputField.setText(action.getText());
                 handleSendMessage();
             });
             quickActionsContainer.getChildren().add(actionButton);
@@ -91,8 +116,8 @@ public class AIViewController {
         // Clear input field
         aiInputField.clear();
 
-        // Generate AI response with typing effect
-        generateAIResponse();
+        // Get AI advice
+        getAIAdvice(message);
     }
 
     /**
@@ -111,13 +136,42 @@ public class AIViewController {
     }
 
     /**
-     * Generate an AI response with typing effect
+     * Get AI advice from the API
      */
-    private void generateAIResponse() {
-        // Select a random response
-        Random random = new Random();
-        String fullResponse = aiResponses.get(random.nextInt(aiResponses.size()));
+    private void getAIAdvice(String message) {
+        try {
+            // Get the AI service
+            AIService aiService = apiServiceFactory.getAIService();
 
+            // Get AI advice
+            AIAdviceResponse response = aiService.getAdvice(message, true, true, true);
+
+            // Display the AI response with typing effect
+            displayAIResponse(response.getMessage());
+
+            // Display suggestions if available
+            if (response.getSuggestions() != null && !response.getSuggestions().isEmpty()) {
+                for (AISuggestion suggestion : response.getSuggestions()) {
+                    // Add a small delay before showing each suggestion
+                    Timeline delay = new Timeline(new KeyFrame(Duration.seconds(1), event -> {
+                        displayAISuggestion(suggestion.getText());
+                    }));
+                    delay.play();
+                }
+            }
+        } catch (ApiException e) {
+            // If there's an error, use a fallback response
+            Random random = new Random();
+            String fallbackResponse = fallbackResponses.get(random.nextInt(fallbackResponses.size()));
+            displayAIResponse(fallbackResponse);
+            System.err.println("Error getting AI advice: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Display an AI response with typing effect
+     */
+    private void displayAIResponse(String fullResponse) {
         // Create the AI message label
         Label aiMessage = new Label("");
         aiMessage.getStyleClass().add("ai-message");
@@ -146,6 +200,27 @@ public class AIViewController {
         );
         timeline.setCycleCount(fullResponse.length());
         timeline.play();
+    }
+
+    /**
+     * Display an AI suggestion
+     */
+    private void displayAISuggestion(String suggestion) {
+        Label suggestionLabel = new Label(suggestion);
+        suggestionLabel.getStyleClass().addAll("ai-message", "ai-suggestion");
+        suggestionLabel.setMaxWidth(600);
+        suggestionLabel.setWrapText(true);
+
+        HBox messageBox = new HBox(suggestionLabel);
+        messageBox.setAlignment(Pos.CENTER_LEFT);
+
+        messageContainer.getChildren().add(messageBox);
+
+        // Scroll to bottom
+        Platform.runLater(() -> {
+            messageContainer.layout();
+            messageScrollPane.setVvalue(1.0);
+        });
     }
 
     /**
